--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node-dev --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.4",
     "express": "^4.18.1",
+    "nodemailer": "^6.7.5",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
