--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --transpile-only --respawn --ignore-watch node_modules src/server.ts"
+    "start": "ts-node-dev --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.4",
@@ -13,7 +14,12 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.197",
+    "@swc/jest": "^0.2.21",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
